Fix SeasonPreview text align

--- a/styles/components/season-preview.scss
+++ b/styles/components/season-preview.scss
@@ -22,6 +22,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 
     transition: all 100ms linear;
 
